Fix call of kill_cgroup script